fix whitespace in index-item-price-integer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2112,10 +2112,16 @@ a:hover {
   text-align: right;
   position: relative;
   top: 1px;
+  white-space: nowrap;
 }
 
 .index-item-price-integer {
   font-weight: 800;
+  white-space: nowrap;
+}
+
+.night {
+  white-space: nowrap;
 }
 
 .star {
